<resources>
    <string name="app_name">Vespapp</string>
    <string name="btn_add_photo">¡Haz una foto!</string>
    <string name="btn_select_photo">Seleccionar foto</string>
    <string name="txt_selFotos">O si ya tienes fotos, ¡añádelas!</string>
    <string name="confirm_cap_titulo">Añade fotos</string>
    <string name="confirm_cap_location">Ha sido en...</string>
    <string name="confirm_cap_map">Mueve el marker</string>
    <string name="confirm_cap_txt_confirm">La foto es de...</string>
    <string name="confirm_cap_map_sight">Avistamiento</string>
    <string name="confirm_cap_questions">Preguntas</string>
    <string name="nido">Nido</string>
    <string name="avispa">Avispa</string>
    <string name="confirm_cap_DeleteDialog_msg">¿Eliminar imagen?</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="add_picture">Haz otra foto</string>
    <string name="select_picture">Selecciona otra foto</string>
    <string name="status_pending">Pendiente</string>
    <string name="status_processed">Tramitado</string>
    <string name="status_processing">En proceso</string>
    <string name="status_unsent">No enviada</string>
    <string name="listo">¡Listo!</string>
    <string name="s_lo_quedan_unas_preguntas">Sólo quedan unas preguntas</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_info_description">InfoDescription</string>
    <string name="title_activity_menu_contact">Contacto</string>
    <string name="title_activity_menu_about_us">Acerca de nosotros</string>
    <string name="title_activity_menu_contributors">Colaboradores</string>
    <string name="title_activity_menu_lopd">LOPD</string>
    <string name="title_activity_menu_help_us">"Ayúdanos"</string>
    <string name="contributers_tittle">Colaboradores de Vespapp</string>
    <string name="icon_heart">&#xf0f9;</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="about_us_date_1">Octubre de 2015</string>
    <string name="about_us_title_1">Primera detección de avispa asiática en Mallorca</string>
    <string name="about_us_body_1">El Laboratorio de Zoología del Departamento de Biología de la Universitat de les Illes Balears confirmó la detección por primera vez de esta avispa en Mallorca, gracias a la colaboración de los apicultores.</string>
    <string name="about_us_link_1">http://diari.uib.es/arxiu/La-avispa-asiatica-ya-esta-en-Mallorca.cid411005</string>
    <string name="about_us_date_2">Octubre - Noviembre de 2015</string>
    <string name="about_us_title_2">Localización y retirada del nido</string>
    <string name="about_us_body_2">El Servei de Protecció d’Espècies de la Conselleria de Medi Ambient, Agricultura i Pesca organiza operativos para la detección del nido de la avispa asiática. El Equipo de control de fauna del COFIB logra retirar con éxito el único nido encontrado en la zona de la Vall de Sóller.</string>
    <string name="about_us_link_2">http://www.caib.es/pidip/dadesComunicat.do?lang=es&amp;codi=8835160</string>
    <string name="about_us_date_3">Marzo de 2016</string>
    <string name="about_us_title_3">Maratón informático para diseñar una app contra la avispa asiática</string>
    <string name="about_us_body_3">La UIB (Laboratorio de Zoología, Escuela Politécnica Superior y Vicerrectorado de Innovación y Transferencia) y Habitissimo organizan un maratón informático para diseñar una app contra la avispa asiática. Primera fase de la creación de Vespapp.</string>
    <string name="about_us_link_3">http://diari.uib.es/arxiu/La-UIB-y-Habitissimo-organizan-un-maraton.cid432855</string>
    <string name="about_us_date_4">Abril – Mayo de 2016</string>
    <string name="about_us_title_4">Segunda fase de la creación de Vespapp</string>
    <string name="about_us_body_4">Un equipo de tres estudiantes de ingeniería informática, becados por Cátedra Santander UIB de Innovación y Transferencia del Conocimiento (CSUIT), llevan a cabo la segunda fase de la creación de Vespapp. Paralelamente el equipo investigador del proyecto (Laboratorio de Zoología, Informática, Sistemas de Información Geográfica (SIG) y Comunicación, participación y redes sociales) trabaja para que Vespapp sea una realidad tangible.</string>
    <string name="about_us_link_4"></string>
    <string name="about_us_date_5">Junio de 2016</string>
    <string name="about_us_title_5">Presentación de Vespapp</string>
    <string name="about_us_body_5">Día 8 de junio se presentó oficialmente el proyecto Vespapp en la Universitat de les Illes Balears, cuyo objetivo es la detección temprana de la avispa asiática. La presentaron:\n\n
        &#8226; <b>Señor Vicenç Vidal</b>, conseller de Medi Ambient, Agricultura i Pesca del Govern de les Illes Balears\n\n
        &#8226; <b>Señora Bàrbara Terrassa</b>, jefa de servicio de Recerca i Desenvolupament Tecnològic de la Conselleria d’Innovació, Recerca i Turisme del Govern de les Illes Balears\n\n
        &#8226; <b>Doctora Mar Leza</b>, del área de Zoología y codirectora del proyecto\n\n
        &#8226; <b>Doctor Llorenç Huguet</b>, rector de la UIB\n\n
        &#8226; <b>Señores Jordi Llull</b>, jefe técnico, y <b>Lídia Nicolau</b>, responsable de personas y cultura, de Habitissimo\n\n
        &#8226; <b>Doctor Bartomeu Alorda</b>, director de la Cátedra Santander-UIB de Innovación y Transferencia\n\n
        &#8226; <b>Doctor Carlos Guerrero</b>, profesor de la Escuela Politécnica Superior y codirector del proyecto\n\n
        &#8226; <b>Doctor Miquel Àngel Miranda</b>, profesor de Zoologia del Departamento de Biología de la UIB\n\n
        &#8226; <b>Doctor Maurici Ruiz</b>, jefe del Servicio de Sistemas de Información Geográfica y Teledetección de la UIB\n\n
        &#8226; <b>Doctor Jordi Llabrés</b>, vicerrector de Innovación y Transferencia de la UIB\n\n
        &#8226; <b>Joan Martín</b>, <b>Carlos Tenorio</b> y <b>Camila Pérez</b> estudiantes del grado de Ingeniería Informática de la UIB\n
    </string>
    <string name="about_us_link_5">http://diari.uib.es/arxiu/Rueda-informativa-Presentacion-de-la-Vespapp-para.cid445787</string>
    <string name="about_us_date_6">Actualmente</string>
    <string name="about_us_title_6">¡Viva la ciencia ciudadana!</string>
    <string name="about_us_body_6">La ciudadanía de las Illes Balears se ha volcado con el proyecto de ciencia ciudadana y gracias a eso cada día estamos más cerca de cumplir nuestro objetivo. ¡Muchas gracias a todos! ¡No olvidéis seguirnos en las redes sociales! #EntreTodosEsPosible #STOPVespa #AUPAAbejas</string>
    <string name="about_us_link_6">
         &#8226; Facebook: https://www.facebook.com/VespApp/<br/>
         &#8226; Twitter: https://twitter.com/vespapp<br/>
    </string>
    <string name="menu_contact_name">Nombre</string>
    <string name="menu_contact_name_hint">"¿Cómo te llamas?"</string>
    <string name="menu_contact_subject">Asunto</string>
    <string name="menu_contact_subject_hint">Asunto</string>
    <string name="menu_contact_message">Mensaje</string>
    <string name="menu_contact_message_hint">Escribe aquí tu mensaje</string>
    <string name="menu_contact_telephone">Teléfono</string>
    <string name="menu_contact_telephone_hint">"Tu teléfono"</string>
    <string name="menu_contact_send">Enviar</string>
    <string name="menu_help_us_message_first">"Por favor, te agradeceríamos que nos enviaras tus datos personales para poder ponernos en contacto contigo si realizaras un avispamiento positivo.\n\nSi nos lo proporcionas, podrás ver tus avispamientos y recibirás notificaciones informativas cuando las hayamos procesado."</string>
    <string name="menu_help_us_button">"Aceptar"</string>
    <string name="activity_new_sighting_map_send">Enviar</string>
    <string name="tab_menu_contact_firstLine">Contacto</string>
    <string name="tab_menu_contact_secondLine">Contacta con nosotros por correo</string>
    <string name="tab_menu_about_firstLine">Acerca de</string>
    <string name="tab_menu_about_secondLine">Conoce nuestra historia</string>
    <string name="tab_menu_contributors_firstLine">Colaboradores</string>
    <string name="tab_menu_contributors_secondLine">Ellos lo han hecho posible</string>
    <string name="tab_menu_login_firstLine">Correo electrónico</string>
    <string name="tab_menu_login_secondLine">Ayúdanos a encontrarte</string>
    <string name="tab_menu_lopd_firstLine">LOPD</string>
    <string name="tab_menu_lopd_secondLine">Ley Orgánica de Protección de Datos</string>
    <string name="questions_activity_toast">Gracias por contestar las preguntas</string>
    <string name="questions_send">Enviar</string>
    <string name="questions_next">Siguiente</string>
    <string name="questions_prev">"Atrás"</string>
    <string name="sightingview_tabs_photo">Fotos</string>
    <string name="sightingview_tabs_info">Info</string>
    <string name="sightingview_tabs_map">Mapa</string>
    <string name="sightingview_notified">Notificado por:</string>
    <string name="sightingview_lat">Latitud:</string>
    <string name="sightingview_lon">Longitud:</string>
    <string name="sightingview_type">Tipo:</string>
    <string name="sightingview_wasp">Avispa</string>
    <string name="sightingview_nest">Nido</string>
    <string name="sightingview_status">Estado:</string>
    <string name="sightingview_status_validated">Procesado</string>
    <string name="sightingview_status_processing">Procesando</string>
    <string name="sightingview_status_pending">Pendiente</string>
    <string name="sightingview_result">Resultado:</string>
    <string name="sightingview_result_positive">Positivo</string>
    <string name="sightingview_result_negative">Negativo</string>
    <string name="sightingview_result_unknown">Desconocido</string>
    <string name="sightingview_description">Descripción</string>
    <string name="newsightingview_marker_title">Mantenme pulsado y arrástrame</string>
    <string name="dialog_email_message">"Por favor, te agradeceríamos que nos enviaras <b>todos</b> los siguientes datos personales para poder ponernos en contacto contigo si el avispamento es positivo.\n\nSi nos lo proporcionas, podrás ver tus avispamientos y recibirás notificaciones informativas cuando las hayamos procesado."</string>
    <string name="dialog_email_contact_name">"Nombre:"</string>
    <string name="dialog_email_contact_mail">"Email:"</string>
    <string name="dialog_email_contact_phone">"Teléfono:"</string>
    <string name="dialog_email_contact_name_hint">"(Tu nombre)"</string>
    <string name="dialog_email_contact_mail_hint">"(Tu email)"</string>
    <string name="dialog_email_contact_phone_hint">"(Tu teléfono)"</string>
    <string name="lopd_text">En cumplimiento de lo dispuesto en la Ley Orgánica 15/1999, de 13 de diciembre, de protección de datos de carácter personal, se le informa que los datos recogidos serán incluidos en uno o más ficheros gestionados por la UIB, la finalidad es contactar con el responsable del avistamiento de la avispa asiática en caso de que sea necesario para obtener más información del avistamiento. Los datos solicitados son necesarios para cumplir con dicha finalidad y, por tanto, el hecho de no obtenerlos impide conseguirla.\n\nLa UIB es la responsable del tratamiento de los datos y como tal le garantiza los derechos de acceso, rectificación, cancelación y oposición de los datos facilitados, para ejercer los que debe dirigirse por escrito a: Universidad de las Islas Baleares, Secretaría General, a la atención del responsable de seguridad, archivo de datos Vespapp, cra. de Valldemossa, km 7,5, 07122 Palma (Islas Baleares). Del mismo modo, la UIB se compromete a respetar la confidencialidad de sus datos y utilizarlas de acuerdo con la finalidad de los ficheros</string>
</resources>