<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="ifContentScrolls">

        <LinearLayout
            android:id="@+id/dialog_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_email_message"
                android:padding="20dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_email_contact_name"
                android:paddingLeft="15sp"
                android:paddingTop="10sp"/>
            <EditText
                android:id="@+id/editText_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:backgroundTint="@color/brandPrimaryDark"
                android:padding="20sp"
                android:hint="@string/dialog_email_contact_name_hint"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_email_contact_mail"
                android:paddingLeft="15sp"
                android:paddingTop="10sp"/>
            <EditText
                android:id="@+id/editText_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:backgroundTint="@color/brandPrimaryDark"
                android:padding="20sp"
                android:hint="@string/dialog_email_contact_mail_hint"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_email_contact_phone"
                android:paddingLeft="15sp"
                android:paddingTop="10sp"/>
            <EditText
                android:id="@+id/editText_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:padding="20sp"
                android:backgroundTint="@color/brandPrimaryDark"
                android:hint="@string/dialog_email_contact_phone_hint"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>